--- a/src/components/Popup/Popup.module.scss
+++ b/src/components/Popup/Popup.module.scss
@@ -1,20 +1,29 @@
 .modal {
   &__popup {
     opacity: 0;
+    display: flex;
     pointer-events: none;
     position: fixed;
     width: 100%;
-    height: 100dvh;
+    min-height: 100vh;
+    max-height: 100vh;
+    height: 100vh;
     left: 0;
-    z-index: 10;
     top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 10;
     padding-top: 65px;
-    background: #00000099;
     transition: 0.5s;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
+    overflow-y: scroll;
+    align-items: stretch;
     justify-content: flex-end;
+    flex-direction: column;
+    -webkit-backdrop-filter: blur(50px);
+    backdrop-filter: blur(50px);
+    background-color: var(--background-popup);
+    flex-wrap: nowrap;
+    align-content: center
   }
 
   &__popupActive {
